--- a/html/index.html
+++ b/html/index.html
@@ -15,11 +15,11 @@
 
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin>console.log("asd")</script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin>console.log("asd2")</script>
 
     <!-- Load our React component. -->
-    <script src="like_button.js"></script>
+    <script src="like_button.js">console.log("asd3  ")</script>
 
   </body>
-</html>
+</html>∫
