--- a/html/test.html
+++ b/html/test.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- Load our React component. -->
+
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+
+
 </head>
 <body>
-  <div id="root"></div>
 
 
-  <!-- Load React. -->
-  <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+<div id="root"></div>
 
-  <!-- Load our React component. -->
-  <script src="test.js"></script>
+
+dasd
+
+<h2> fuck</h2>
+
+
+<script>console.log("test")</script>
+
+<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js" crossorigin></script>
+<script src="test.js" type="text/babel"></script>
 </body>
 </html>
