--- a/html/test.html
+++ b/html/test.html
@@ -3,29 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!-- Load our React component. -->
-
-    <!-- Load React. -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-
-
 </head>
 <body>
 
 
 <div id="root"></div>
 
-
-dasd
-
-<h2> fuck</h2>
-
-
-<script>console.log("test")</script>
-
 <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js" crossorigin></script>
-<script src="test.js" type="text/babel"></script>
+<script src="test.jsx" type="text/babel"></script>
+
+
 </body>
 </html>
